# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  README.md  docusaurus.config.js  package.json  sidebars.js  vercel.json
docs/: perception_quickstart.md  sensor_fusion_foundation.md
docs/getting-started/: what-is-physical-ai.md
docs/module-1-ros2-nervous-system/: SUMMARY.md  rclpy-ai-bridge.md  ros2-as-nervous-system.md  ros2-control.md
i18n/ur/: code.json
src/: __init__.py
src/cli/: __init__.py
src/components/: AuthContext.js  ChatbotWidget.js  ContentPersonalization.js  TranslationButton.js
src/css/: custom.css
src/integrations/: __init__.py
src/isaac_ros/: CMakeLists.txt  PERCEPTION_VALIDATION.md  README.md  SETUP.md  test_basic_perception_nodes.py  test_installation.py
src/isaac_sim/: BASIC_NODES_VALIDATION.md  Bridge_VALIDATION.md  README.md  RUNTIME_VALIDATION.md  SCENARIOS_VALIDATION.md  setup.py  test_basic_nodes.py  test_bridge_communication.py  test_example_scenarios.py  test_installation.py  test_runtime_installation.py
src/launch/: perception_pipeline.launch.py
src/lib/: __init__.py  utils.py  validators.py
src/models/: __init__.py  message.py  skill.py  subagent.py
src/nav2_bipedal/: CMakeLists.txt  CONTROLLERS_VALIDATION.md  README.md  VALIDATION.md  test_bipedal_controllers.py  test_nav2_installation.py
src/perception_msgs/: CMakeLists.txt
src/perception_msgs/action/: PerceptionTask.action
src/perception_msgs/msg/: DetectedObject.msg  EnvironmentalMap.msg  ProcessedData.msg  SensorData.msg
src/perception_msgs/srv/: Calibration.srv  ObjectDetection.srv
(+83 files in other folders)
